--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -509,7 +509,7 @@ section {
     inset: 0;
     padding: 50px 0 10px 0;
     margin: 0;
-    background: rgba(0, 131, 116, 0.9);
+    background: #0a700f;;
     overflow-y: auto;
     transition: 0.3s;
     z-index: 9998;
@@ -1886,7 +1886,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit]:hover {
-  background: rgba(0, 131, 116, 0.8);
+  background: #053708;
 }
 
 @-webkit-keyframes animate-loading {
